<resources>
    <string name="app_name">BitCoinWallet</string>

    <string name="hello_world">Hello world!</string>
    <string name="content_image_contact">Image of account</string>
    <string name="content_image_arrow_right">Arrow right</string>
    <string name="content_image_contact_to_send">Image of account to send</string>
    <string name="dummy">Dummy</string>
    <string name="phone">987123654</string>

    <!-- Symbols unicode -->
    <string name="icon_bitcoin">Ƀ</string>
    <string name="icon_euro">€</string>

    <!-- Login activity -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="save_credentials">Save credentials</string>
    <string name="login_with">Logged with save credentials</string>
    <string name="login_without">Logged without save credentials</string>
    <string name="wrong_credentials">Wrong credentials</string>

    <!-- Main activity -->
    <string name="title_activity_main">BitCoin Wallet</string>
    <string name="title_main">Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_receive">Receive</string>
    <string name="action_send">Send</string>
    <string name="action_logout">Logout</string>

    <!-- Send activity -->
    <string name="title_activity_send">SendActivity</string>
    <string name="action_qr_code">QR code</string>

    <!-- Send to contact activity -->
    <string name="title_activity_send_to_contact">SendToContactActivity</string>

    <!-- Receive activity -->
    <string name="title_activity_receive">Receive</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings activity -->
    <string name="pref_title_currency_of_list">Currency</string>
    <string name="user_preferences">User preferences</string>
    <string name="currency_type_default">EUR</string>
    <string-array name="pref_currency_of_list_entries">
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BOV</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHE</item>
        <item>CHF</item>
        <item>CHW</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>COU</item>
        <item>CRC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CYP</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EEK</item>
        <item>EGP</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KMF</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LTL</item>
        <item>LVL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRO</item>
        <item>MTL</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MXV</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SKK</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>STD</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMM</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>USD</item>
        <item>USN</item>
        <item>USS</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VEB</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XAG</item>
        <item>XAU</item>
        <item>XBA</item>
        <item>XBB</item>
        <item>XBC</item>
        <item>XBD</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XFO</item>
        <item>XFU</item>
        <item>XOF</item>
        <item>XPD</item>
        <item>XPF</item>
        <item>XPT</item>
        <item>XTS</item>
        <item>XXX</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMK</item>
        <item>ZWD</item>
    </string-array>
    <string-array name="pref_currency_of_list_values">
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224.29</item>
        <item>224</item>
    </string-array>
</resources>
