<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.liberic.bitcoinwallet.activity.SendToContactActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView"
        android:layout_marginTop="15dp"
        android:id="@+id/linearLayout">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_contact"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/bender"
            android:contentDescription="@string/content_image_contact" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Jose Vicente"
            android:id="@+id/name_contact"/>
    </LinearLayout>

    <ImageView
        android:src="@drawable/abc_ic_go_search_api_mtrl_alpha"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="fitEnd"
        android:background="@color/accent"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/content_image_arrow_right" />

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView"
        android:layout_marginTop="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_contact_to_send"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/bender"
            android:contentDescription="@string/content_image_contact_to_send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Sr. X"
            android:id="@+id/name_contact_to_send"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:layout_marginTop="30dp"
        android:background="#000000"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/icon_bitcoins"
            android:text="@string/icon_bitcoin"
            android:contentDescription=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:textSize="30sp"
            android:layout_marginRight="5dp"/>

        <EditText
            android:id="@+id/edit_bitcoins"
            android:text="0.00000001"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:background="#000000"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="20dp"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/icon_currency"
            android:text="@string/icon_euro"
            android:textColor="#FFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="26sp"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/balance_currency"
            android:text="4.0"
            android:textColor="#FFF"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/action_send"
        android:id="@+id/button"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:shadowColor="@android:color/transparent"
        android:layout_alignBottom="@+id/linearLayout2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
