<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    app:theme="@style/ToolbarTheme"
    app:popupTheme="@style/PopupToolbarTheme">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center_vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_account"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app1:border_width="2dp"
                app1:border_color="@color/primary_light"
                android:src="@drawable/homer"
                android:contentDescription="@string/content_image_contact"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_toRightOf="@+id/image_account">
                <TextView
                    android:id="@+id/icon_bitcoins"
                    android:text="@string/icon_bitcoin"
                    android:contentDescription=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textSize="26sp"/>

                <TextView
                    android:id="@+id/balance_bitcoins"
                    android:text="0.00000001"
                    android:textColor="#FFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|end">
                <TextView
                    android:id="@+id/balance_currency"
                    android:text="4.0"
                    android:textColor="#FFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"/>

                <TextView
                    android:id="@+id/icon_currency"
                    android:text="@string/icon_euro"
                    android:textColor="#FFF"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:gravity="center"
            tools:context="com.bitsblock.wallet.activity.MainActivity" >
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">
                <Button
                    style="?android:attr/buttonStyle"
                    android:id="@+id/action_send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:text="@string/action_send"
                    android:textSize="17sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center">
                <Button
                    style="?android:attr/buttonStyle"
                    android:id="@+id/action_receive"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:text="@string/action_receive"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
